<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>TTKRadioButtonWindow</class>
 <widget class="QMainWindow" name="TTKRadioButtonWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>465</width>
    <height>321</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>TTKRadioButtonWindow</string>
  </property>
  <widget class="QWidget" name="centralWidget">
   <widget class="TTKRadioButtonWidget" name="widget" native="true">
    <property name="geometry">
     <rect>
      <x>110</x>
      <y>50</y>
      <width>220</width>
      <height>40</height>
     </rect>
    </property>
   </widget>
   <widget class="TTKRadioButtonWidget" name="widget_2" native="true">
    <property name="geometry">
     <rect>
      <x>110</x>
      <y>110</y>
      <width>220</width>
      <height>40</height>
     </rect>
    </property>
   </widget>
   <widget class="TTKRadioButtonWidget" name="widget_3" native="true">
    <property name="geometry">
     <rect>
      <x>110</x>
      <y>170</y>
      <width>220</width>
      <height>40</height>
     </rect>
    </property>
   </widget>
   <widget class="TTKRadioButtonWidget" name="widget_4" native="true">
    <property name="geometry">
     <rect>
      <x>110</x>
      <y>230</y>
      <width>220</width>
      <height>40</height>
     </rect>
    </property>
   </widget>
  </widget>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <customwidgets>
  <customwidget>
   <class>TTKRadioButtonWidget</class>
   <extends>QWidget</extends>
   <header>ttkradiobuttonwidget.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
